--- a/Addev/templates/base.html.twig
+++ b/Addev/templates/base.html.twig
@@ -1,12 +1,81 @@
+
+{% set route = app.request.attributes.get('_route') %}
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+
+        <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/font-awesome.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        {% block stylesheets %}
+        {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+   		 <header>
+
+
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-color">
+      <a class="navbar-brand" href="#"><ion-icon name="tv"></ion-icon> <ion-icon name="cart"></ion-icon> <ion-icon name="contacts"></ion-icon> Addev  </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Rechercher annonces..." aria-label="Search">
+          <button class="btn btn-os my-2 my-sm-0" type="submit"><ion-icon class="search" name="search"></ion-icon></button>
+        </form>
+      </div>
+    </nav>
+   		</header>
+
+
+        {% block body %}
+        
+
+        
+        
+        {% endblock %}
+		
+        <hr class="featurette-divider">
+
+        <footer class="container footer">
+        <p class="float-right"><a class="lnfoot" href="#">Back to top</a></p>
+        <p>© 2018 Addev, Inc. · <a class="lnfoot"  href="#">F.A.Q</a> · <a href="#">Mentions légales</a></p>
+	  	</footer>
+	  
+
+	{% block javascripts %}
+    <script>
+        var main_url = "{{ absolute_url(path('home')) }}";
+        var asset_dir = "{{ absolute_url(asset('/')) }}";
+    </script>
+    <script src="{{ asset('js/jquery-3.3.1.min.js') }}"></script>
+    <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+    <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
+          <script src="https://unpkg.com/ionicons@4.2.0/dist/ionicons.js"></script>
+	{% endblock %}
     </body>
 </html>
