creation des entités

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -6,16 +6,21 @@
 		<div class="jumbotron">
 			<div class="container">
 			<h1 class="display-3">Adopte un developpeur</h1>
-			<p>Vous avez un projet et vous ne connaissez rien à "l'informatique" mais vous avez un projet ? Ce site est pour vous !</p>
-			<span class="d-flex justify-content-around align-items-center"><a class="btn btn-color2 btn-lg" href="#" role="button">Vous êtes client ?(inscription) »</a><a class="btn btn-color2 btn-lg" href="#" role="button">Vous êtes développeur?(inscription) »</a></span>
-			</div>
+			<p>Vous avez un projet et vous ne connaissez rien à "l'informatique"? Ce site est pour vous !</p>
+			
 		</div>
+	</div>
+	<figure id="logo"><img src="{{ asset ('/images/logo.png')}}" width="500" height="250" alt="logo"/></figure>
+
+		<span class="d-flex justify-content-around align-items-center"><a class="btn btn-color2 btn-lg" href="#" role="button">Client</a>
+			<a class="btn btn-color2 btn-lg" href="#" role="button">Développeur</a></span>
+			
 	{% endblock %}
 
 <div class="container-fluid">
 
 		<ul class="list-group col-8 offset-2">
-			<li class="list-group-item ">Etape 1: Mangez du cassoulet</li>
+			<li class="list-group-item">Etape 1: Mangez du cassoulet</li>
 			<li class="list-group-item">Etape 2: Proccurer vous des saucissons de qualités</li>
 			<li class="list-group-item">Etape 3: Commander en quelques clic</li>
 			<li class="list-group-item">Etape 4: Vous pouvez négocier </li>
