--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,10 +18,10 @@
 
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-color">
-      <a class="navbar-brand" href="#"><ion-icon name="tv"></ion-icon> <ion-icon name="cart"></ion-icon> <ion-icon name="contacts"></ion-icon> Addev  </a>
+      {# <a class="navbar-brand" href="#"><ion-icon name="tv"></ion-icon> <ion-icon name="cart"></ion-icon> <ion-icon name="contacts"></ion-icon> Addev  </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </button> #}
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
@@ -29,11 +29,11 @@
             <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Les annonces</a>
           </li>
-          <li class="nav-item">
+          {# <li class="nav-item">
             <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
+          </li> 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
@@ -42,7 +42,9 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
+          #}
         </ul>
+         
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Rechercher annonces..." aria-label="Search">
           <button class="btn btn-os my-2 my-sm-0" type="submit"><ion-icon class="search" name="search"></ion-icon></button>
@@ -53,19 +55,16 @@
 
 
         {% block body %}
-        
 
-        
         
         {% endblock %}
 		
         <hr class="featurette-divider">
 
         <footer class="container footer">
-        <p class="float-right"><a class="lnfoot" href="#">Back to top</a></p>
-        <p>© 2018 Addev, Inc. · <a class="lnfoot"  href="#">F.A.Q</a> · <a href="#">Mentions légales</a></p>
+         <p class="float-right"><a href="#">Contact</a></p>
+        <p>© 2018 Addev, Inc. <a class="lnfoot" href="#">F.A.Q</a> <a href="#">Mentions légales</a> </p>
 	  	</footer>
-	  
 
 	{% block javascripts %}
     <script>
