--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,16 @@
+
+@font-face{
+	font-family: 'Quicksand', sans-serif;
+}
+
+*{
+	/*box-sizing: régle css qui permet de configurer comment les élémelnt HTML 
+	changent de dinamique quand on applique certaines régles de dimmensionnement*/
+	box-sizing: border-box;
+}
+
+
+
 html{
     position:relative;
     min-height: 100%;
@@ -8,14 +21,58 @@ body{
     margin-bottom: 200px;
     box-sizing: content-box;
 }
-.navbar-color .navbar-brand {
+
+.navbar-brand {
+  display: inline-block;
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  line-height: inherit;
+  white-space: nowrap;
+}
+
+h1{
+    color: #94FFF7; 
+    padding-top: 30px; 
+    padding: 50px; 
+    margin-top:10%;
+    margin-bottom:70%;
+    /* padding:30px; */
+    font-weight: bold;
+    align-items: inherit;
+}
+/* .intro{
+  background-image: url('../images/bleu.jpg');
+  top:0;
+  left:0;
+  right: 0;
+  position: relative;
+  width: 100%;
+} */
+
+
+
+/* 
+.navbar-brand:hover, .navbar-brand:focus {
+  text-decoration: none;
+}
+
+.navbar-light .navbar-brand {
+  color: rgba(0, 0, 0, 0.9);
+}
+
+.navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
+  color: rgba(0, 0, 0, 0.9);
+}
+
+.navbar-dark .navbar-brand {
   color: #fff;
 }
 
-.navbar-color.navbar-brand:hover, .navbar-color.navbar-brand:focus {
+.navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
   color: #fff;
 }
-
 .navbar-color .navbar-nav .nav-link {
   color: rgba(255, 255, 255, 0.5);
 }
@@ -64,11 +121,13 @@ a.bg-color:hover, a.bg-color :focus,
 button.bg-color:hover,
 button.bg-color:focus {
   background-color: #1d2124 !important;
-}
-header{
+} */
+
+/* header{
     position:relative;
     top: 25%;
 }
+
 .cont{
   position: relative;
   top:0;
@@ -82,28 +141,27 @@ nav{
   position:fixed;
   top:2%;
 }
+
 .ln{
   display:flex;
   flex-direction: row;
   justify-content: space-evenly;
-
 }
-
 
 .logoNav{
     width:3em;
 }
 #navbar ul li a:hover {
-    color: ##40A497;
+    color: #40A497;
 }
 .navbar-dark .navbar-toggler {
     color: #00AB94;
     border-color: #00AB94;
     border: solid 2px;
-}
+} */
 
 /* btn custom */
-
+/* 
 .btn-custom {
   color: #fff;
   background-color: #34064e;
@@ -144,11 +202,11 @@ nav{
 
 .hydrated{
   font-size: 1.4em;
-}
+} */
 
 
 /* Bouton btn-outline-sucess*/
-.btn-os {
+/* .btn-os {
   color: #ffff;
   background-color: transparent;
   background-image: none;
@@ -183,7 +241,7 @@ nav{
 }
 .search{
   font-size:1.5em;
-}
+} */
 /* .contacts, .search{
   background-color: green;
   display:flex;
@@ -191,7 +249,7 @@ nav{
   align-items:center;
 } */
 
-.btn-color2 {
+/* .btn-color2 {
   color: #fff;
   background-color: #007bff;
   border-color: #007bff;
@@ -227,13 +285,448 @@ nav{
 lnfoot {
   color:blue;
 }
-footer{
-  color:black;
-  background-color:grey;
-  width: 200%;
-}
 
-h1{
+
+.rounded-circle{
+  width: 150px;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5px;
+  position: relative;
+} */
   
 
+    /* float: right; */
+    /* display: block; */
+    /* width: 100px; */
+/* }
+
+.featurette {
+    width: 50%;
+    margin-left: 5%;
+   
+} */
+
+
+/* #scroll.clicked {
+
+  position: fixed;
+  top: 90%;
+  right: 5%;
+
 }
+
+#scroll.clicked {
+
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+
+}
+#scroll {
+
+  text-align: center;
+  width: 50px;
+  height: 50px;
+  background: black;
+  border-radius: 50%;
+  margin: 0 auto;
+      margin-top: 0px;
+      margin-right: auto;
+  margin-top: -55px;
+  margin-right: -25px;
+  color: white;
+  padding-top: 0px;
+  font-size: 26px;
+  line-height: 26px;
+  cursor: pointer;
+  position: absolute;
+  right: 50%;
+  -webkit-transition: -webkit-transform 0.6s ease;
+  -moz-transition: -moz-transform 0.6s ease;
+  transition: transform 0.6s ease;
+
+}
+*, ::before, ::after {
+
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+} */
+  
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  color:darkblue;
+  background-color: #fff;
+  border-color: none;
+}
+.nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover {
+  border-color:#DEF7FF;
+  color: #87C8FF;
+}
+
+#borderhtml {
+    background-color: rgba (255, 255, 255, 0.5);
+/*    border-radius: 20px;*/
+    
+}
+
+.container {
+    align-content: center;
+}
+
+
+
+.text-muted {
+    margin-left: 15px;
+    color: black ! important;
+}
+
+/*
+.card-deck {
+    margin-bottom: 15%;
+    margin-top: 15%;
+    
+}
+*/
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100;
+  padding: 0;
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+}
+
+
+.container-logo {
+    display: flex;
+	  justify-content: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
+  
+    
+}
+
+h1, h2, h3, h4, h5, p, li{
+  font-family: 'Quicksand', sans-serif;
+}
+
+.display-3 {
+     
+    font-size: 600%;
+}
+
+.bg-h1{
+  background-image: url('images/blue-wave.jpg');
+ 
+}
+
+.div-background {
+    margin-top:10px;
+    padding:10px;
+    
+}
+
+.jumbotron, .py-5 {
+  background-color: #87C8FF;
+  margin-bottom: 0em;
+   
+}
+
+
+.nav-tabs-2, #myTab{
+  background-color: #87C8FF;
+  padding-top: 10px;
+
+}
+.modal{
+  
+    color: darkblue;
+  }
+
+  #profile-tab{
+    background-color: #DEF7FF;
+  }
+
+
+/* .my-0 {
+    color: #87C8FF;
+} */
+
+/* .btn-block {
+    color:darkblue;
+    border-color:darkblue;
+} */
+
+.card-header{
+  color: #87FFB2;
+}
+
+.card-body{
+  background-color: #87C8FF;
+}
+
+.li{
+  color: darkblue;
+}
+
+.btn-outline-primary, .card-header, .my-0{
+  color: white;
+  background-color:#0067C2;
+}
+
+
+#bottom-nav {
+    display: flex;
+    align-items: center;
+}
+
+
+
+.float-right{
+  text-decoration: none;
+  padding-right: 10px;
+  overflow: hidden;
+}
+
+a{
+  list-style-type: none;
+  text-decoration: none;
+  color: #000;
+  margin-left: 5px;
+  overflow: hidden;
+
+}
+
+
+
+.nav-bar {
+  display:block;
+  text-align:center;
+
+}
+
+h2, h4, p{
+  color: darkblue;
+}
+
+.img-cover {
+  -o-object-fit: cover;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
+.text-white {
+  color: #fff !important;
+}
+
+.pb-lg-9, .py-lg-9 {
+  padding-bottom: 9rem !important;
+}
+.pt-lg-9, .py-lg-9 {
+  padding-top: 9rem !important;
+}
+.pb-5, .py-5 {
+  padding-bottom: 3rem !important;
+}
+.pt-5, .py-5 {
+  padding-top: 3rem !important;
+}
+.position-relative {
+  position: relative !important;
+}
+.g-recaptcha{
+  float: right;
+  margin-bottom: 1.5%;
+}
+
+form{
+ margin-top: 75px; 
+ margin-bottom: 75px; 
+}
+
+.color{
+  background-color: #DEF7FF;
+}
+
+.form-signin{
+  width: 60%;
+  margin-left: 20%;
+  margin-bottom: 15%;
+
+}
+
+.btn-retour{
+  margin-top: 15%;
+  margin-top: 2%;
+}
+
+.alert-success, .alert-danger{
+  margin-bottom:3%;
+}
+
+.bg-light{
+  background-color: #DEF7FF !important;
+}
+
+h4{
+  margin: 50px;
+  text-align:center;
+}
+
+
+
+footer{
+  /* color:black;
+  background-color:white; */
+  width: 100%;
+  text-align: bottom;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  
+}
+
+footer {
+  background-color: #343a40!important;
+  padding: 50px;
+  text-align: center;
+  color: white;
+  display: inline-block;
+  /* box-sizing: content-box; */
+}
+
+a, a:focus, a:hover {
+  color: white;
+  margin-right: 5%;
+  }
+  
+  .float-left {
+    color: white;
+  }
+  
+
+  #height-max{
+    height: 100px;
+    width: 100%;
+    overflow: hidden;
+    
+    } 
+    
+    .btn-outline-secondary {
+      color: white;
+      background-color: #0069d9;
+      background-image: none;
+      border-color: none  !important;
+      margin-top: 5%;
+    }
+    
+    .btn-outline-secondary:hover {
+      color: #fff;
+      background-color: #5d88ff;
+      border-color: none !important;
+    }
+    
+    .btn-secondary{
+      margin: 5%;
+    }
+    
+.nav-link{
+  color: darkblue;
+}
+
+.sidebar{
+  background-color: #5d88ff;
+  padding-top: 5%;
+}
+
+.main{
+  padding-top: 200%;
+
+}
+
+.modal-body{
+  width: 300px;
+}
+
+.row{
+  margin-top: 2em;
+}
+
+.table-striped{
+  margin-top: 10%;
+}
+
+.info {
+  position: relative; 
+}
+#section1 {padding-top:50px;height:500px;color: #fff; background-color: #1E88E5;}
+#section2 {padding-top:50px;height:500px;color: #fff; background-color: #673ab7;}
+#section3 {padding-top:50px;height:500px;color: #fff; background-color: #ff9800;}
+#section41 {padding-top:50px;height:500px;color: #fff; background-color: #00bcd4;}
+#section42 {padding-top:50px;height:500px;color: #fff; background-color: #009688;}
+
+
+.backtotop{
+  color: #0067C2;
+}
+.backtotop:hover{
+  color: #5d88ff;
+}
+ 
+
+
+/* doudou */
+
+album{
+  text-align:center;
+}
+
+.center{
+  margin-top: 30%
+  float:none;  /* annule le float:left de bootstrap*/
+ 
+}
+
+#name{
+  text-align:center;
+}
+
+#profil{
+  padding:25px;
+}
+
+.rounded-circle{
+  margin-left:80px;margin-bottom:25px;border:2px solid black;
+}
+
+#btn-see{
+  margin-left:70px;margin-right:60px;
+}
+
+.btn-outline-secondary{
+  margin-bottom: 15px;
+}
+
+
+
+
+
+
+/* 
+@media screen all and{
+	main{
+	display: flex;
+	height: auto;
+	} */
