--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,6 @@
 
 {% set route = app.request.attributes.get('_route') %}
+{% set session = app.session %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -7,7 +8,7 @@
 
         <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/font-awesome.min.css') }}">
+    {# <link rel="stylesheet" href="{{ asset('css/font-awesome.min.css') }}"> #}
     <link rel="stylesheet" href="{{ asset('css/style.css') }}">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         {% block stylesheets %}
@@ -16,65 +17,178 @@
     <body>
    		 <header>
 
-
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-color">
-      {# <a class="navbar-brand" href="#"><ion-icon name="tv"></ion-icon> <ion-icon name="cart"></ion-icon> <ion-icon name="contacts"></ion-icon> Addev  </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+<!-- bar de navigation -->
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand" href="#">Logo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button> #}
-
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Les annonces</a>
-          </li>
-          {# <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li> 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-          #}
-        </ul>
-         
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Rechercher annonces..." aria-label="Search">
-          <button class="btn btn-os my-2 my-sm-0" type="submit"><ion-icon class="search" name="search"></ion-icon></button>
-        </form>
-      </div>
+    </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link {% if route == 'home' %}active{% endif %}" href="{{ path('home') }}">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link{% if route == 'adverts' %} active {% endif %}" href="{{ path('adverts') }}">Annonces</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link{% if route == 'info' %} active {% endif %}" href="{{ path('info') }}">Info</a>
+                </li>
+    
+                  {# si on est deconnecté, on affiche: #}
+                {% if app.session.get('account') is null %}
+    
+                    <li class="nav-item">
+                        <a class="nav-link {% if route == 'register' %}active{% endif %}" href="{{ path('register') }}">Inscription</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if route == 'login' %}active{% endif %}" href="{{ path('api_login') }}">Connexion</a>
+                    </li>
+    
+                    {# sinon on affiche: #}
+                    {% else %}
+    
+                    <li class="nav-item">
+                        <a class="nav-link {% if route == 'logout' %}active{% endif %}" href="{{ path('api_logout') }}">Deconnexion</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if route == 'profile' %}active{% endif %}" href="{{ path('profile') }}">Profil</a>
+                    </li>
+    
+                    {% if app.session.get('account') is not null and session.get('account').adminlevel == 1  %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if route == 'admin' %}active{% endif %}" href="{{ path('admin') }}">[Admin]</a>
+                        </li>
+                    {% endif %}
+                {% endif %}
+    
+    
+    
+            </ul>
+        </div>
     </nav>
-   		</header>
 
 
+
+
+
+      
+  
+       
+  </header>
         {% block body %}
-
+        {# <div class="intro py-5 py-lg-9 position-relative text-white">
+            <div class="bg-overlay-primary">
+              <img src="images/bleu.jpg" class="img-fluid img-cover" alt="Robust UI Kit" style="height: 300px; width: 100%; display: block;" >
+            </div>
+            <div class="intro-content py-6 text-center">
+              <div class="container">
+                <div class="row align-items-center">
+                  <div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto text-center">
+                    <h1 class="my-3 display-4 d-none d-lg-inline-block">{{ app.session.get('title').h1 }}</h1>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+         #}
         
         {% endblock %}
-		
-        <hr class="featurette-divider">
 
-        <footer class="container footer">
-         <p class="float-right"><a href="#">Contact</a></p>
-        <p>© 2018 Addev, Inc. <a class="lnfoot" href="#">F.A.Q</a> <a href="#">Mentions légales</a> </p>
-	  	</footer>
+    <!-- bas de la page -->
+    <footer class="mastfoot mt-auto ">
+        <div class="inner">
 
+          
+          
+          <span><a id="nav-link{% if route == 'faq' %}active{% endif %}" href="{{ path('faq') }}">F.A.Q</a></span>
+          
+
+          {# <span><a href="#">Mention Legale</a></span> #}
+          <!-- Button trigger modal -->
+          <span><a href="#"  data-toggle="modal" data-target="#mentions"> Mention Legale</a></span>
+
+<!-- Modal -->
+<div class="modal fade" id="mentions" tabindex="-1" role="dialog" aria-labelledby="mentionsTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="mentionsTitle">Mention Legale</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
+
+        raesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
+      
+        Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+        {# <button type="button" class="btn btn-primary">Save changes</button> #}
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+          <!-- <span><a href="#">Contact</a></span> -->
+
+          <!-- Button trigger modal -->
+          <span><a href="#"  data-toggle="modal" data-target="#contactModal">Contact</a></span>
+
+<!-- Modal -->
+<div class="modal fade" id="contactModal" tabindex="-1" role="dialog" aria-labelledby="contactModalTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="contactModalTitle">Contact</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <p>Nom:</p>
+          <p>Prenom:</p>
+          <p>Tel:</p>
+          <p>Email:</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+        {# <button type="button" class="btn btn-primary">Save changes</button> #}
+      </div>
+    </div>
+  </div>
+</div>
+           <span>© 2018 Addev, Inc.</a></span>
+        </div>
+      </footer>
+
+
+
+    <!-- <hr class="featurette-divider">
+
+    <footer class="container footer">
+     <p class="float-right"><a href="#">Contact</a></p>
+    <p>© 2018 Addev, Inc. <a class="lnfoot" href="#">F.A.Q</a> <a href="#">Mentions légales</a> </p>
+  </footer> -->
+
+
+
+
+      <script>
+          var main_url = "{{ absolute_url(path('home')) }}";
+          var asset_dir = "{{ absolute_url(asset('/')) }}";
+      </script>
+      <script src="{{ asset('js/jquery-3.3.1.min.js') }}"></script>
+      <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+      <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
+      <script src="https://unpkg.com/ionicons@4.2.0/dist/ionicons.js"></script>
 	{% block javascripts %}
-    <script>
-        var main_url = "{{ absolute_url(path('home')) }}";
-        var asset_dir = "{{ absolute_url(asset('/')) }}";
-    </script>
-    <script src="{{ asset('js/jquery-3.3.1.min.js') }}"></script>
-    <script src="{{ asset('js/bootstrap.min.js') }}"></script>
-    <script src="{{ asset('js/jquery-ui.min.js') }}"></script>
-          <script src="https://unpkg.com/ionicons@4.2.0/dist/ionicons.js"></script>
 	{% endblock %}
     </body>
 </html>
