--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,87 +1,126 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
+<body class="color">
 	{% block header%}
-		<div class="jumbotron">
-			<div class="container">
-			<h1 class="display-3">Adopte un developpeur</h1>
-			<p>Vous avez un projet et vous ne connaissez rien à "l'informatique"? Ce site est pour vous !</p>
-			
-		</div>
-	</div>
-	<figure id="logo"><img src="{{ asset ('/images/logo.png')}}" width="500" height="250" alt="logo"/></figure>
+	<!-- titre de la page        -->
 
-		<span class="d-flex justify-content-around align-items-center"><a class="btn btn-color2 btn-lg" href="#" role="button">Client</a>
-			<a class="btn btn-color2 btn-lg" href="#" role="button">Développeur</a></span>
-			
+
+	<div class="intro py-4 py-lg-8 position-relative text-white bg-h1">
+			<div class="bg-overlay-primary">
+				<img src="{{ asset('images/bleu.jpg') }}" class="img-fluid img-cover" alt="Robust UI Kit" style=" width: 100%; display: block;">
+			</div>
+				<div class="intro-content py-6 text-center">
+					<div class="container">
+						<div class="row align-items-center">
+							<div class="col-12 col-sm-10 col-md-8 col-lg-6 mx-auto text-center">
+								<h1 class="my-3 display-4 d-none d-lg-inline-block">Adopte un developpeur</h1>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		
+
+    
+
+<!-- slogan -->
+        <div class="jumbotron">
+            <div class="container">
+                <h2>Le site de rencontre entre developpeur et entreprise</h2>
+                <p>Vous avez un projet et vous ne connaissez rien à "l'informatique"? Ce site est pour vous !</p>
+
+<!--
+                <div id="scroll" style="position: fixed; top: 90%; right: 5%;" class="clicked">
+                    <span class="">↓</span>
+                </div>
+-->
+            </div>
+        </div>
+<!-- fin de la partie haut de la page -->
+   		
 	{% endblock %}
 
-<div class="container-fluid">
+<!-- les logos des premieres languages informatique -->
+<div class="container-logo">
 
-		<ul class="list-group col-8 offset-2">
-			<li class="list-group-item">Etape 1: Mangez du cassoulet</li>
-			<li class="list-group-item">Etape 2: Proccurer vous des saucissons de qualités</li>
-			<li class="list-group-item">Etape 3: Commander en quelques clic</li>
-			<li class="list-group-item">Etape 4: Vous pouvez négocier </li>
-			<li class="list-group-item">Etape 5: Proposer de la purée/saucisse </li>
+		<img  src="images/html.png" alt="logo-html" />
+		<img src="images/js.png" alt="logo-js" />
+		<img src="images/css.png" alt="logo-css" />
+	
+	</div>
+
+
+<!-- les boxes client et developpeurs avec boutons d'inscription -->
+<div class="container">
+<div class="card-deck mb-3 text-center">
+	<div class="card mb-4 box-shadow">
+	  <div class="card-header">
+		<h4 class="my-0 font-weight-normal">Je suis Client</h4>
+	  </div>
+	  <div class="card-body">
+		<ul class="list-unstyled mt-3 mb-4">
+		  <li>blablabla</li>
+		  <li>blablabla</li>
+		  <li>blablabla</li>
+		  <li>blablabla</li>
 		</ul>
-
-			
-			{# <div class="album py-5 bg-light">
-						<div class="container">
-		
-							<div class="row">
-								<div class="col-md-4">
-									<div class="card mb-4 box-shadow">
-										<img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22288%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20288%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_163fa7852d8%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_163fa7852d8%22%3E%3Crect%20width%3D%22288%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2296.828125%22%20y%3D%22118.8%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
-										<div class="card-body">
-											<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-											<div class="d-flex justify-content-between align-items-center">
-												<div class="btn-group">
-													<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-													<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-												</div>
-												<small class="text-muted">9 mins</small>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-4">
-									<div class="card mb-4 box-shadow">
-										<img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="https://universe-meeps.leagueoflegends.com/v1/assets/images/collections/starguardian/ahri-splash.jpg" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
-										<div class="card-body">
-											<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-											<div class="d-flex justify-content-between align-items-center">
-												<div class="btn-group">
-													<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-													<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-												</div>
-												<small class="text-muted">9 mins</small>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-4">
-									<div class="card mb-4 box-shadow">
-										<img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="https://ddragon.leagueoflegends.com/cdn/img/champion/splash/Ahri_0.jpg" data-holder-rendered="true" style="height: 225px; width: 100%; display: block;">
-										<div class="card-body">
-											<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-											<div class="d-flex justify-content-between align-items-center">
-												<div class="btn-group">
-													<button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-													<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-												</div>
-												<small class="text-muted">9 mins</small>
-											</div>
-										</div>
-									</div>
-								</div> #}
-		
-
-
-		 
-			
+		<button type="button" class="btn btn-lg btn-block btn-outline-primary">Je m'inscris</button>
+	  </div>
+	</div>
+	<div class="card mb-4 box-shadow">
+	  <div class="card-header">
+		<h4 class="my-0 font-weight-normal">Je suis Developpeur</h4>
+	  </div>
+	  <div class="card-body">
+		<ul class="list-unstyled mt-3 mb-4">
+		  <li>blablabla</li>
+		  <li>blablabla</li>
+		  <li>blablabla</li>
+		  <li>blablabla</li>
+		</ul>
+		 <button type="button" class="btn btn-lg btn-block btn-outline-primary">Je m'inscris</button>
+	  </div>
+	</div>
+  </div>
 </div>
+
+<!-- trois boxes avec les dernieres annonces -->
+
+<div class="album py-5 bg-light">
+	<div class="container">
+	<h4>Les dernières annonces:</h4>
+	
+
+	<div class="row">
+{% for advert in lastThreeAd %}
+
+			<div class="col-md-4">
+				<div class="card mb-4 box-shadow">
+					<img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="images/Technologie.jpg" data-holder-rendered="true">
+					<div class="card-body">
+							<p class="card-text">Titre: {{advert.title}}</p>
+							<p class="card-text" id="height-max">Description: {{advert.content}}</p>
+						<div class="d-flex justify-content-between align-items-center">
+							<div class="btn-group">
+								<a href="{{ path('advert', { id : advert.id }) }}"  class="btn btn-sm btn-outline-secondary">Voir l'annonce</a>
+								{# <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> #}
+							</div>
+							<small class="text-muted">{{ advert.postDate|diff('%h:%i:%S %d-%m-%Y') }}</small>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			{% endfor %}
+		</div>
+
+
+
+
+
+
+</body>
 
 {% endblock %}
